syntax = "proto3";
package ncs.service.user.sign.v1;
option go_package = "backend/app/service/user/sign/api/grpc/v1";

import "google/api/annotations.proto";

// Base

message Info {
    int64 uid = 1;
    int32 sign_date = 2;
    int32 sign_days = 3;
}

// Message

message InfoReq {
    int64 uid = 1;
}

message InfoResp {
    Info info = 1;
}

message SignReq {
    int64 uid = 1;
}

message SignResp {
    bool already_signed = 1;
}

service Sign {
    rpc Info (InfoReq) returns (InfoResp) {
        option (google.api.http) = {
            get: "/user/sign/{uid}"
        };
    }
    rpc Sign (SignReq) returns (SignResp) {
        option (google.api.http) = {
            post: "/user/sign"
            body: "*"
        };
    }
}

