syntax = "proto3";
package ncs.user.sign;
option go_package = "grpc";

// Base

message Info {
    int64 uid = 1;
    int64 sign_time = 2;
    int32 sign_days = 3;
}

// Message

message InfoReq {
    int64 uid = 1;
}

message InfoResp {
    Info info = 1;
}

message SignReq {
    int64 uid = 1;
}

message SignResp {
}

service Sign {
    rpc Info (InfoReq) returns (InfoResp);
    rpc Sign (SignReq) returns (SignResp);
}

